minor fixes to projects spacing and alignment

--- a/src/index.css
+++ b/src/index.css
@@ -59,26 +59,44 @@ h1 {
     height: auto;
     width: auto;
     max-width: 100%;
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
     transition: max-width 0.5s ease;
     transition-delay: 0.5s;
 }
-
-.screenshot-paper {
-    align-content: center;
+.project-container{
+  padding-bottom: 150px;
+}
+.project-row{
+  margin-top: 50px;
+  margin-bottom: 50px;
+  transition: all 0.5s ease;
 }
 
 .paper {
     max-width: calc(100vw - 20px);
 }
+.img-aligner {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
 
 @media only screen and (max-width: 992px) {
-
     .project-screenshot {
       max-width: 0px;
       display: block;
       transition: max-width 0.5s ease;
   }
+  .project-row{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    transition: all 0.5s ease;
+  }
+}
+
+.bottom-margin-lg{
+  margin-bottom: 70px;
 }
